--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -1,9 +1,10 @@
 $base-spacing: 8px;
 
-$palette-background: #000;
+$palette-black: #000;
+
+$palette-mid--dark: #272727;
+$palette-mid--light: #a3a3a3;
+
 $palette-plain: #fff;
-$palette-headers: #272727;
-$palette-sub-header: #272727;
-$palette-links: #fac802;
-$palette-copy: #a3a3a3;
-$palette-highlight: $palette-links;
+
+$palette-yellow: #fac802;
