--- a/src/styles/generic/_base.scss
+++ b/src/styles/generic/_base.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-	background: $palette-background;
+	background: $palette-black;
 	color: $palette-plain;
 	font-size: 16px;
 	width: calc(100vw - 10vw);
