refactor(scss): move files and add some new base styling in for navigation and masthead

--- a/src/styles/components/_c-content.scss
+++ b/src/styles/components/_c-content.scss
@@ -15,8 +15,12 @@
 
 	&__body {
 		@media (min-width: 40em) {
-			grid-column-start: 3;
+			grid-column-start: 2;
 			grid-column-end: 8;
+		}
+
+		p:first-of-type {
+			color: $palette-plain;
 		}
 	}
 
