--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,7 +5,7 @@ html {
 
 body {
 	background: $palette-black;
-	color: $palette-plain;
+	color: $palette-mid--light;
 	font-size: 16px;
 	width: calc(100vw - 10vw);
 	margin: 0 auto;
