--- a/src/styles/components/_c-masthead.scss
+++ b/src/styles/components/_c-masthead.scss
@@ -2,6 +2,15 @@
 	color: $palette-plain;
 	transition: 0.15s all;
 	text-decoration: none;
+	font-size: 1.25rem;
+	font-weight: normal;
+	display: inline-block;
+	text-align: left;
+	margin-bottom: $base-spacing * 2;
+
+	@media (min-width: 48em) {
+		margin-bottom: $base-spacing * 4;
+	}
 
 	&:hover {
 		color: $palette-yellow;
@@ -10,6 +19,8 @@
 	&__item {
 		display: block;
 		text-decoration: none;
+		position: relative;
+		margin: 0 0 $base-spacing 0;
 
 		&:first-child {
 			color: $palette-yellow;
