--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,16 +17,13 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    color: #272727;
-    font-size: 4rem;
-    line-height: 1.2;
-    margin: 0
-}
+	color: #272727;
+	font-size: 3rem;
+	letter-spacing: -4px;
+	line-height: 1;
+	margin: 0;
 
-@media screen and (min-width: 48em) {
-    h1{
-        font-size:80px;
-        letter-spacing: -4px;
-        line-height: 1
-    }
+	@media screen and (min-width: 48em) {
+		font-size:80px;
+	}
 }
