--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-	font-family: Spectral;
+	font-family: 'Spectral';
 	margin: 0;
 }
 
@@ -25,5 +25,11 @@ h1 {
 
 	@media screen and (min-width: 48em) {
 		font-size:80px;
+	}
+}
+
+p {
+	&:first-of-type {
+		color: $palette-plain;
 	}
 }
