--- a/src/styles/components/_c-navigation.scss
+++ b/src/styles/components/_c-navigation.scss
@@ -13,7 +13,7 @@
 
 	&__link {
 		color: $palette-plain;
-		display: block;
+		display: inline-block;
 		font-size: 1.2rem;
 		line-height: 1.4;
 		padding: $base-spacing / 3 0;
@@ -26,8 +26,5 @@
 		&.is-active {
 			color: $palette-yellow;
 		}
-
-
 	}
-
 }
