feature(style): add in colour variables for `light` theme

--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -4,7 +4,9 @@ $palette-black: #000;
 
 $palette-mid--dark: #272727;
 $palette-mid--light: #a3a3a3;
+$palette-mid--lightest: #f4f4f4;
 
 $palette-plain: #fff;
 
 $palette-yellow: #fac802;
+$palette-red: #ff103d
