--- a/src/styles/components/_c-content.scss
+++ b/src/styles/components/_c-content.scss
@@ -10,6 +10,7 @@
 	}
 
 	&__title {
+		margin-bottom: $base-spacing * 3;
 		@media (min-width: 40em) {
 			grid-column-start: 1;
 			grid-column-end: 9;
