--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -18,12 +18,14 @@ h1, h2, h3, h4 {
 
 h1 {
 	color: #272727;
-	font-size: 3rem;
+	font-size: 2.5rem;
 	letter-spacing: -2px;
 	line-height: 1.1;
 	margin: 0;
-
-	@media screen and (min-width: 48em) {
+	@media (min-width: 40em) {
+		font-size: 3rem;
+	}
+	@media (min-width: 48em) {
 		font-size:5rem;
 	}
 }
@@ -64,9 +66,13 @@ blockquote {
 }
 
 p {
+	margin: 0 0 $base-spacing * 1.5 0;
+
 	&:first-of-type {
 		color: $palette-plain;
+		margin-top: 0;
 	}
+
 	&:last-of-type {
 		margin-bottom: 0;
 	}
