chore(typo): updates capitalisation of header

--- a/src/styles/components/_c-masthead.scss
+++ b/src/styles/components/_c-masthead.scss
@@ -3,6 +3,7 @@
 	font-size: 1.25rem;
 	font-weight: normal;
 	display: inline-block;
+	line-height: 1.2;
 	text-align: left;
 	margin-bottom: $base-spacing * 2;
 
