--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,8 +7,13 @@ body {
 	background: $palette-black;
 	color: $palette-mid--light;
 	font-size: 16px;
-	width: calc(100vw - 10vw);
 	margin: 0 auto;
+	padding: 0 $base-spacing * 3;
+
+	@media (min-width: 40em) {
+		padding: 0;
+		width: calc(100vw - 10vw);
+	}
 }
 
 h1, h2, h3, h4 {
