chore(ui): tighten up line-height on h1

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -33,6 +33,7 @@ h1 {
 	margin: 0;
 	@media (min-width: 40em) {
 		font-size: 3rem;
+		line-height: 1;
 	}
 	@media (min-width: 48em) {
 		font-size:5rem;
