chore(ui): adds base `fr` value for content area

--- a/src/styles/objects/_o-content.scss
+++ b/src/styles/objects/_o-content.scss
@@ -23,9 +23,10 @@
 	}
 
 	&__body {
+		align-content: start;
 		display: grid;
 		grid-area: content;
+		grid-template-columns: 1fr;
 		justify-content: start;
-		align-content: start;
 	}
 }
