--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -117,3 +117,25 @@ ul {
 		}
 	}
 }
+
+hr {
+	display: block;
+	border: 0;
+	text-align: center;
+	overflow: visible;
+	margin: $base-spacing * 3 0;
+
+	&::before {
+    content: '...';
+    display: inline-block;
+    margin-left: 0.6em;
+    color: #fff;
+    position: relative;
+    top: -1.4rem;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.4rem;
+    letter-spacing: 1.2rem;
+    line-height: 1;
+	}
+}
