--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -123,7 +123,7 @@ hr {
 	border: 0;
 	text-align: center;
 	overflow: visible;
-	margin: $base-spacing * 3 0;
+	margin: $base-spacing * 4 0 $base-spacing * 3;
 
 	&::before {
     content: '...';
