--- a/src/styles/components/_c-colophon.scss
+++ b/src/styles/components/_c-colophon.scss
@@ -18,12 +18,6 @@
 			color: $palette-yellow;
 		}
 
-		&:after {
-			color: $palette-plain;
-			content: '-';
-			display: block;
-		}
-
 		&.is-active {
 			color: $palette-yellow;
 		}
@@ -33,6 +27,13 @@
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
+
+		&::before {
+			color: $palette-plain;
+			content: '-';
+			display: block;
+			font-size: 1.6rem;
+		}
 	}
 
 	&__items {
