--- a/src/styles/objects/_o-content.scss
+++ b/src/styles/objects/_o-content.scss
@@ -1,32 +1,32 @@
 .o-content {
-	display: grid;
-	padding-top: $base-spacing * 3;
-	grid-template-areas:
-		"masthead"
-		"content"
-		"colophon"
-		"footer";
+  display: grid;
+  padding-top: $base-spacing * 3;
+  grid-template-areas:
+    'masthead'
+    'content'
+    'colophon'
+    'footer';
 
-	@media (min-width: 40em) {
-		grid-template-areas:
-			"masthead content"
-			"colophon content"
-			". content"
-			"footer footer";
-		grid-template-columns: 4fr 8fr;
-		grid-gap: $base-spacing * 2;
-		padding-top: $base-spacing * 5;
-	}
+  @media (min-width: 40em) {
+    grid-template-areas:
+      'masthead content'
+      'colophon content'
+      '. content'
+      'footer footer';
+    grid-template-columns: 4fr 8fr;
+    grid-gap: $base-spacing * 2;
+    padding-top: $base-spacing * 5;
+  }
 
-	&__sidebar {
-		grid-area: masthead;
-	}
+  &__sidebar {
+    grid-area: masthead;
+  }
 
-	&__body {
-		align-content: start;
-		display: grid;
-		grid-area: content;
-		grid-template-columns: 1fr;
-		justify-content: start;
-	}
+  &__body {
+    align-content: start;
+    display: grid;
+    grid-area: content;
+    grid-template-columns: 1fr;
+    justify-content: start;
+  }
 }
