chore: corrects variable usage

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -148,7 +148,7 @@ hr {
     content: '...';
     display: inline-block;
     margin-left: 0.6em;
-    color: #fff;
+    color: $palette-plain;
     position: relative;
     top: -1.4rem;
     font-weight: 400;
