--- a/src/styles/components/_c-content.scss
+++ b/src/styles/components/_c-content.scss
@@ -38,7 +38,7 @@
         content: '...';
         display: inline-block;
         margin-left: 0.6em;
-        color: #fff;
+        color: $palette-plain;
         position: relative;
         top: -1.4rem;
         font-weight: 400;
