--- a/src/styles/components/_c-masthead.scss
+++ b/src/styles/components/_c-masthead.scss
@@ -1,5 +1,5 @@
 .c-masthead {
-  color: $palette-plain;
+	color: map-get(map-get($palette, masthead), light);
   font-size: 1.25rem;
   font-weight: normal;
   display: inline-block;
@@ -12,7 +12,7 @@
   }
 
   &:hover {
-    color: $palette-yellow;
+		color: map-get(map-get($palette, nav-links), light);
   }
 
   &__item {
@@ -22,7 +22,8 @@
     margin: 0 0 $base-spacing 0;
 
     &:first-child {
-      color: $palette-yellow;
+			color: map-get(map-get($palette, nav-links), light);
+			font-weight: bold;
       text-transform: uppercase;
     }
   }
