Made some files look nicer

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,8 +6,8 @@ html {
 }
 
 body {
-	background: map-get(map-get($palette, background), light);
-	color: map-get(map-get($palette, copy), light);
+  background: map-get(map-get($palette, background), light);
+  color: map-get(map-get($palette, copy), light);
   font-size: 16px;
   margin: 0 auto;
   padding: 0 $base-spacing * 3;
@@ -15,9 +15,8 @@ body {
   @media (min-width: 40em) {
     padding: 0;
     width: calc(100vw - 10vw);
-	}
+  }
 }
-
 
 h1,
 h2,
@@ -26,13 +25,13 @@ h4 {
   margin: 0;
 
   + p {
-		color: map-get(map-get($palette, copy), light);
+    color: map-get(map-get($palette, copy), light);
   }
 }
 
 h1 {
   font-family: 'Rubik';
-	color: map-get(map-get($palette, header), light);
+  color: map-get(map-get($palette, header), light);
   text-transform: uppercase;
   font-size: 2.3rem;
   font-weight: 900;
@@ -61,7 +60,7 @@ h3 {
 }
 
 a {
-	color: map-get(map-get($palette, links), light);
+  color: map-get(map-get($palette, links), light);
   font-weight: bold;
   transition: 0.15s all;
   text-decoration: none;
@@ -76,7 +75,7 @@ a {
   }
 
   &:focus {
-		outline: 3px auto map-get(map-get($palette, active), light);
+    outline: 3px auto map-get(map-get($palette, active), light);
   }
 
   &[rel='noopener'] {
@@ -85,7 +84,8 @@ a {
 }
 
 blockquote {
-  border-left: $base-spacing / 2 solid rgba(map-get(map-get($palette, copy), light), 0.15);
+  border-left: $base-spacing / 2 solid
+    rgba(map-get(map-get($palette, copy), light), 0.15);
   display: inline-block;
   padding-left: $base-spacing;
   margin-left: 0;
@@ -123,7 +123,7 @@ p {
   }
 
   a {
-		color: map-get(map-get($palette, links), light);
+    color: map-get(map-get($palette, links), light);
   }
 }
 
