--- a/src/styles/components/_c-colophon.scss
+++ b/src/styles/components/_c-colophon.scss
@@ -5,11 +5,15 @@
   @media (min-width: 40em) {
     margin-top: 0;
   }
+
+  h3 {
+    margin-bottom: 0;
+  }
   &__link {
     color: map-get(map-get($palette, nav-links), light);
-    font-family: 'Space Mono';
+    font-family: 'Lato';
     font-size: 1.6rem;
-    font-weight: normal;
+    font-weight: 900;
     margin: 0;
     transition: 0.15s all;
     text-decoration: none;
@@ -33,6 +37,7 @@
       content: '-';
       display: block;
       font-size: 1.6rem;
+      line-height: 1;
     }
   }
 
