--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 html {
   font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
@@ -31,9 +32,9 @@ h4 {
 }
 
 h1 {
-  font-family: 'Rubik', 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
-  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Rubik', 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   color: map-get(map-get($palette, header), light);
   text-transform: uppercase;
   font-size: 2.3rem;
@@ -59,7 +60,7 @@ h3 {
   font-size: 1.25rem;
   line-height: 1.1;
   margin: 0;
-  margin-bottom: $base-spacing / 2;
+  margin-bottom: math.div($base-spacing, 2);
 }
 
 a {
@@ -93,7 +94,7 @@ a {
 }
 
 blockquote {
-  border-left: $base-spacing / 2 solid
+  border-left: math.div($base-spacing, 2) solid
     rgba(map-get(map-get($palette, copy), light), 0.15);
   display: inline-block;
   padding-left: $base-spacing;
