--- a/src/styles/components/_c-content.scss
+++ b/src/styles/components/_c-content.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .c-content {
   display: grid;
   p {
@@ -83,7 +84,7 @@
       background: map-get(map-get($palette, nav-links), dark);
       color: map-get(map-get($palette, tags), light);
       display: inline-block;
-      padding: $base-spacing / 1.5 $base-spacing * 1.5;
+      padding: math.div($base-spacing, 1.5) $base-spacing * 1.5;
       border-radius: $base-spacing * 1.5;
       font-size: 0.6rem;
       text-transform: uppercase;
