--- a/src/styles/components/_c-navigation.scss
+++ b/src/styles/components/_c-navigation.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 .c-navigation {
   &__primary {
     list-style-type: none;
@@ -15,7 +16,7 @@
     display: inline-block;
     font-size: 1.2rem;
     line-height: 1.4;
-    padding: $base-spacing / 3 0;
+    padding: math.div($base-spacing, 3) 0;
     transition: 0.15s all;
     text-decoration: none;
 
@@ -28,7 +29,7 @@
       &:before {
         content: '\2900';
         position: relative;
-        margin-right: $base-spacing / 2;
+        margin-right: math.div($base-spacing, 2);
       }
     }
   }
